tests/elab_fail/tokenErrors.lean.out.expected
tokenErrors.lean:1:10: error: missing end of character literal
tokenErrors.lean:2:9: error: invalid escape sequence
tokenErrors.lean:3:7: error: unterminated string literal
tokenErrors.lean:4:11: error: unterminated identifier escape
tokenErrors.lean:8:0: error: unterminated comment
