tests/elab_fail/tokenErrors.lean
#check 'hi
#check '\y'
#check "hi
#check hi.«
/--
#print Nat
/-
